# CrossroadsSimulator

./: .gitignore  CMakeLists.txt  README.md
example/: input.json
include/: lights.h  parser.h  queue.h  simulation.h  vehicle.h
src/: lights.c  main.c  parser.c  queue.c  simulation.c  vehicle.c
tests/: test_lights.c
